<resources>
    <string name="app_name">Weather Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_date_required">Enter the Date (Required)</string>
    <string name="hint_weather">Category (Showers, Sunny, Storms, etc)</string>
    <string name="hint_City">What city?</string>
    <string name="hint_State">What state?</string>
    <string name="hint_Temperature">Temperature in F</string>
    <string name="hint_humidity">Humidity Percentage</string>
    <string name="hint_Category">How severe was it? (if applicable)</string>
    <string name="label_date">Date:</string>
    <string name="label_weather">Weather:</string>
    <string name="label_City">City:</string>
    <string name="label_State">State:</string>
    <string name="label_Temperature">Temperature:</string>
    <string name="label_humidity">Humidity:</string>
    <string name="label_category">Category:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the weather</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="weather_added">Weather added successfully</string>
    <string name="weather_not_added">Weather was not added due to an error</string>
    <string name="weather_updated">Weather updated</string>
    <string name="weather_not_updated">Weather was not updated due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri: </string>
    <string name="invalid_insert_uri">Invalid insert Uri: </string>
    <string name="invalid_update_uri">Invalid update Uri: </string>
    <string name="invalid_delete_uri">Invalid delete Uri: </string>
    <string name="insert_failed">Insert failed:</string>

    <string name="hint_text">Enter city (Example: Cape Girardeau)</string>
    <string name="api_key">4efb8d372b362dca9cf32b29e4daf6b2</string>
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/weather?q=</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="humidity">Humidity: %s</string>

</resources>
