<ScrollView android:id="@+id/detailsScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/dateLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_date"/>

        <TextView
            android:id="@+id/dateTextView"
            style="@style/WeatherTextView"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/categoryLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_weather"/>

        <TextView
            android:id="@+id/categoryTextView"
            style="@style/WeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/cityLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_City"/>

        <TextView
            android:id="@+id/cityTextView"
            style="@style/WeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/stateLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_State"/>

        <TextView
            android:id="@+id/stateTextView"
            style="@style/WeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/tempLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_Temperature"/>

        <TextView
            android:id="@+id/tempTextView"
            style="@style/WeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/humidLabelTextView"
            style="@style/WeatherLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_humidity"/>

        <TextView
            android:id="@+id/humidTextView"
            style="@style/WeatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"/>

    </GridLayout>
</ScrollView>